fixed all groups and group/show group image spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -295,6 +295,7 @@ section {
 				float: left;
 				width: 200px;
 				margin-right: 10px;
+				margin-top: 10px;
 			}
 				img {
 					float: left;
